video/audip add

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
        
         <header>
             This is my portfolio website
+            <input type="button" value="Go to Index_2" onclick="location.href='index_2.html';" />
+
         </br>
 
         </br>
@@ -129,6 +131,8 @@
                     <input type="submit"/>
                     <input type="reset"/>
 
+
+                      
 
                 </form>
             </section>
